--- a/izhaar.ipynb
+++ b/izhaar.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -246,8 +246,9 @@
        "[5 rows x 22 columns]"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -272,18 +273,21 @@
        "Name: count, dtype: int64"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df[\"Diabetes_binary\"].value_counts()\n",
-    "# 0 = no diabetes 1 = diabetes"
+    "# 0 = no diabetes 1 = diabetes\n",
+    "\n",
+    "# Here, im just showing the number of observation among the 2 classes and we already se an imbalance between them. With no diabetes (Class 0) being the majoritary class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -305,19 +309,21 @@
     "plt.xlabel(\"Class\")\n",
     "plt.ylabel(\"Number of samples\")\n",
     "plt.title(\"Class distribution of Diabetes_binary\")\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# just a small histogramm to show it visualy"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On observe un fort déséquilibre entre les individus diabétiques et non diabétiques."
+    "There is a significant imbalance between individuals with diabetes and those without diabetes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,12 +331,14 @@
     "\n",
     "X = df.drop(\"Diabetes_binary\", axis=1)\n",
     "y = df[\"Diabetes_binary\"]\n",
+    "\n",
+    "# here im just puting the dataframe w/o the classes in the variable y\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +360,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# NEED TO BE CHANGED TO HAVE TRAIN VAL AND TEST -> SPLIT THE DATA IN 3\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y,\n",
@@ -1043,8 +1051,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
